k8s/base/bff.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff
  namespace: messager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bff
  template:
    metadata:
      labels:
        app: bff
    spec:
      containers:
        - name: bff
          image: mablinov2704/bff:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            requests:
              cpu: "150m"
              memory: "192Mi"
            limits:
              cpu: "300m"
              memory: "384Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: bff
  namespace: messager
spec:
  selector:
    app: bff
  ports:
    - port: 8080
      targetPort: 8080
